--- a/ExpressServer/package.json
+++ b/ExpressServer/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "path": "^0.12.7"
+    "nodegit": "^0.27.0",
+    "path": "^0.12.7",
+    "recursive-readdir": "^2.2.3"
   }
 }
